Clien Test Setup and Modal

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,9 +1,10 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="description" content="Docstash - cloud storage solution">
     <link rel="icon" href="favicon.png" type="image/png">
     <title>Docstash</title>
   </head>
