Added Service Worker and manifest

--- a/client/tools/build.html
+++ b/client/tools/build.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="Docstash - cloud storage solution">
+    <link rel="manifest" href="manifest.json">
     <title>Docstash</title>
   </head>
   <body>
+    <script>
+    (function() {
+      if('serviceWorker' in navigator) {
+        navigator.serviceWorker.register('/docstash-sw.js');
+      }
+      })();
+    </script>
     <div id="app"></div>
   </body>
 </html>
